--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@ html {
 
 body {
   background-color: #1115;
+  overflow-x: hidden;
 }
 
 header {
@@ -31,7 +32,7 @@ header .cabecera {
 
 header .cabecera .imagenCabecera {
   height: 2rem;
-  aspect-ratio: 1/1;
+  width: 2rem;
   border-radius: 50%;
 }
 
@@ -206,8 +207,7 @@ main {
 .menuDesplegado {
   -webkit-backdrop-filter: blur(14px);
           backdrop-filter: blur(14px);
-  -webkit-transition: .3s;
-  transition: .3s;
+  padding: .5rem;
   border: .1rem #bbb;
   border-style: none solid solid none;
   border-radius: 10px;
@@ -226,9 +226,9 @@ main {
 
 .menuDesplegado .imagen-Menu {
   height: 2rem;
-  aspect-ratio: 1/1;
+  width: 2rem;
   border-radius: 50%;
-  margin: 0.2rem;
+  margin: 0.5rem;
 }
 
 .menuDesplegado ul li {
@@ -253,7 +253,141 @@ main {
           transform: scale(1.2);
 }
 
+.fotoYLoggin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contenedorBotones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem;
+}
+
+.contenedorBotones a {
+  text-decoration: none;
+  color: #333;
+  font-family: 'Amatic SC', cursive;
+  background-color: rgba(204, 204, 204, 0.2);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  padding: 0.2rem;
+  border: 0.1rem rgba(204, 204, 204, 0.856);
+  border-radius: 10px;
+  border-style: none solid solid none;
+  cursor: pointer;
+  pointer-events: all;
+  margin-left: .5rem;
+  margin-right: .5rem;
+  text-shadow: none;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.contenedorBotones a:hover {
+  background-color: rgba(254, 254, 254, 0.2);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
 .escondido {
-  visibility: hidden;
+  position: absolute;
+  right: -100%;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.mod {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(33, 33, 33, 0.856);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+  z-index: 10;
+}
+
+.mod .modalContainer {
+  display: flexbox;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: translate(50%);
+          transform: translate(50%);
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #bbb;
+  width: auto;
+}
+
+.mod .modalContainer h2 {
+  font-family: 'Anton', sans-serif;
+  font-size: 2rem;
+  text-shadow: .2rem .2rem 0 #fff;
+}
+
+.mod .modalContainer .contenedorInput {
+  text-align: end;
+  margin: .5rem;
+}
+
+.mod .modalContainer .contenedorInput label {
+  font-family: 'Amatic SC', cursive;
+  font-size: 1rem;
+  margin-right: 0.5rem;
+}
+
+.mod .modalContainer .contenedorInput input {
+  width: 35vw;
+  font-family: 'Anton', sans-serif;
+}
+
+.mod .modalContainer .botonera {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.mod .modalContainer .botonera a {
+  text-decoration: none;
+  color: #333;
+  font-family: 'Amatic SC', cursive;
+  background-color: rgba(204, 204, 204, 0.2);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  padding: 0.2rem;
+  border: 0.1rem rgba(204, 204, 204, 0.856);
+  border-radius: 10px;
+  border-style: none solid solid none;
+  margin-left: .5rem;
+  margin-right: .5rem;
+  text-shadow: none;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.mod .modalContainer .botonera a:hover {
+  background-color: rgba(254, 254, 254, 0.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 /*# sourceMappingURL=style.css.map */
